force-app/main/default/objects/Meta_Configuration__c/Meta_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure the Meta API Credentials here to send WhatsApp Messages</description>
    <label>Meta Configuration</label>
</CustomObject>