force-app/main/default/objects/Meta_Configuration__c/fields/App_Secret_key__c.field-meta.xml
<CustomField>
    <fullName>App_Secret_key__c</fullName>
    <description>The App Secret Key of your meta Developer App</description>
    <label>App Secret key</label>
    <type>TextArea</type>
</CustomField>