force-app/main/default/objects/Meta_Configuration__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <description>The Application Id of your Meta App</description>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>