force-app/main/default/objects/Meta_Configuration__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>The Channel will be Either &apos;SMS&apos; or &apos;WhatsApp&apos;</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>