force-app/main/default/objects/Meta_Configuration__c/fields/Phone_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Id__c</fullName>
    <description>The Phone number Id in your meta Developer App</description>
    <label>Phone Number Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>