force-app/main/default/objects/Meta_Configuration__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <description>The Name of your Service Provider (Eg:- Twilio, Meta)</description>
    <label>Service Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>