force-app/main/default/objects/Meta_Configuration__c/fields/WhatsApp_Business_Id__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Business_Id__c</fullName>
    <description>The WhatsApp Business Id of your WhatsApp business Account shown in your Meta Developer App</description>
    <label>WhatsApp Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>